🐛 fix|TemplateConfig|Not registering the rotation option

--- a/templates/measured-template-config-partial.html
+++ b/templates/measured-template-config-partial.html
@@ -93,7 +93,7 @@
     <i class="tip fas fa-info-circle" data-tooltip="walledtemplates.MeasuredTemplateConfiguration.rotate-with-token.Hint"></i>
   </label>
   <div class="form-fields">
-    <input type="checkbox" name="flags.walledtemplates.rotateWithAttachedToken" {{checked document.flags.walledtemplates.rotateWithToken}}/>
+    <input type="checkbox" name="flags.walledtemplates.rotateWithAttachedToken" {{checked document.flags.walledtemplates.rotateWithAttachedToken}}/>
   </div>
   <p class="hint">
 </div>
